--- a/custom.html
+++ b/custom.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="농협 하나로마트 동탄2신도시점">
     <meta property="og:description" content="다양한 주말 특가 정보를 만나보세요">
     <meta property="og:image"
-        content="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free_myprofile/%EB%A5%B4%ED%83%84+%EC%98%A4%EB%A6%AC%EC%A7%80%EB%84%90/%EB%A5%B4%ED%83%84%EC%98%A4%EB%A6%AC%EC%A7%80%EB%84%90%ED%94%84%EB%A1%9C%ED%95%84.png">
+        content="./나로.jpg" />
     <title>농협 하나로마트 동탄2신도시점</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
