--- a/custom.html
+++ b/custom.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="농협 하나로마트 동탄2신도시점">
     <meta property="og:description" content="다양한 주말 특가 정보를 만나보세요">
     <meta property="og:image"
-        content="./나로.jpg" />
+        content="./naro.jpg" />
     <title>농협 하나로마트 동탄2신도시점</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -33,7 +33,7 @@
             height: 58px;
             border-radius: 100%;
             border: 1px solid black;
-            background-image: url('나로.jpg');
+            background-image: url('naro.jpg');
             background-position: center;
             background-size: cover;
         }
