--- a/custom.html
+++ b/custom.html
@@ -33,7 +33,7 @@
             height: 58px;
             border-radius: 100%;
             border: 1px solid black;
-            background-image: url('naro.jpg');
+            background-image: url('./naro.jpg');
             background-position: center;
             background-size: cover;
         }
